--- a/templates/base.html
+++ b/templates/base.html
@@ -2,14 +2,15 @@
 <html>
     <head>
         <style>
-            h1 { text-align: center; }
+            h1 { text-align: center;}
             .error {color: red;}
+            .container {text-align: center;}
         </style>
         <title>{{title}}</title>
     </head>
 <body>
         <div>
-            <a href='/main-blog'>Main Blog Page</a>
+            <a href='/main-blog'>Main Blog Page</a>&nbsp;&nbsp;&nbsp;
             <a href='/add-a-blog'>Add Blog Entry</a>            
         </div>
     {% block content %}
