created standard names as requested in the project

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,8 @@
     </head>
 <body>
         <div>
-            <a href='/main-blog'>Main Blog Page</a>&nbsp;&nbsp;&nbsp;
-            <a href='/add-a-blog'>Add Blog Entry</a>            
+            <a href='/blog'>Main Blog Page</a>&nbsp;&nbsp;&nbsp;
+            <a href='/newpost'>Add Blog Entry</a>            
         </div>
     {% block content %}
     {% endblock %}
