--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,8 @@
     <head>
         <style>
             h1 { text-align: center;}
-            .error {color: red;}
+            .error {color: red;
+                    font-style: italic;}
             .container {text-align: center;}
         </style>
         <title>{{title}}</title>
