--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,7 @@
 <!doctype html>
 <html>
-    <head>
-        <style>
-            h1 { text-align: center;}
-            .error {color: red;
-                    font-style: italic;}
-            .container {text-align: center;}
-        </style>
+    <head>        
+        <link rel= "stylesheet" type="text/css" href= "{{ url_for('static', filename='css/base.css') }}">
         <title>{{title}}</title>
     </head>
 <body>
