--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,6 +1,12 @@
+body {
+    margin: 0px;
+    padding: 60px;
+    background-color: beige;   
+}
+
 h1 { 
     text-align: center;
-    font-style: italic;
+    color: darkblue;
 }
 .error {
     color: red;
@@ -8,5 +14,5 @@ h1 {
 }
 .container {
     text-align: center;
-    background-color: yellow;
+    background-color: grey;
 }
