--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
                 <li><a href="/logout">logout</a></li>
             </ul>
             <ul>
-                <!-- <li><a href="/">home</a></li> -->
+                <li><a href="/">home</a></li>
                 <li><a href="/blog">Main Blog Page</a></li>
                 <li><a href="/newpost">Add Blog Entry</a></li>
             </ul>
