added bootstrap formating and created model for MVC

--- a/templates/display_blog.html
+++ b/templates/display_blog.html
@@ -2,8 +2,9 @@
 
 {% block content %}
 
-    <h1>{{title}}</h1>
-    <hr>
-    <p>{{blog}}</p>
+<div class="panel panel-default">
+        <div class="panel-heading"><h3>{{title}}</h3></div>
+        <div class="panel-body">{{blog}}</div>
+</div>
 
 {% endblock %}
