--- a/templates/add-a-blog.html
+++ b/templates/add-a-blog.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-    
+<div class="jumbotron text-center">
+    <h1>Add a blog</h1>
+</div>
     <form method='post'>
-        <h1>Add a blog</h1>
-        <hr />
+        
         <div class="container">
         <label>   
             Blog title <br>
