--- a/templates/base.html
+++ b/templates/base.html
@@ -1,23 +1,32 @@
 <!doctype html>
 <html>
-    <head>        
-        <link rel= "stylesheet" type="text/css" href= "{{ url_for('static', filename='css/base.css') }}">
+    <head>
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>        
+        <!-- <link rel= "stylesheet" type="text/css" href= "{{ url_for('static', filename='css/base.css') }}"> -->
         <title>{{title}}</title>
     </head>
 <body>
-    <div>
-        <nav>
-            <ul id="user-account">
-                <li><a href="/login">login</a></li>
-                <li><a href="/logout">logout</a></li>
-            </ul>
-            <ul>
-                <li><a href="/">home</a></li>
-                <li><a href="/blog">Main Blog Page</a></li>
-                <li><a href="/newpost">Add Blog Entry</a></li>
-            </ul>
-        </nav>  
-    </div>
+    <div class="container">
+
+        <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                  <div class="navbar-header">
+                    <a class="navbar-brand" href="/">Blogz</a>
+                  </div>
+                  <ul class="nav navbar-nav">
+                    <li class="active"><a href="/">Home</a></li>
+                    <li><a href="/blog">All Blogs</a></li>
+                    <li><a href="/newpost">Add a Blog</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/login">Login</a></li>
+                    <li><a href="/logout">Logout</a></li>
+                  </ul>
+            </div>
+        </nav>
+    
     {% with messages = get_flashed_messages(with_categories=True) %}
         <ul>
         {% for category,message in messages %}
@@ -25,8 +34,12 @@
         {% endfor %}
         </ul>
     {% endwith %}
+    </div>
+    
+    <div class="container">
     {% block content %}
     {% endblock %}
+    </div>
 
 </body>
 </html>
