to generate the initial tour program

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,12 +13,12 @@
         <nav class="navbar navbar-default">
                 <div class="container-fluid">
                   <div class="navbar-header">
-                    <a class="navbar-brand" href="/">Blogz</a>
+                    <a class="navbar-brand" href="/">Tour-zone</a>
                   </div>
                   <ul class="nav navbar-nav">
                     <li class="active"><a href="/">Home</a></li>
-                    <li><a href="/blog">All Blogs</a></li>
-                    <li><a href="/newpost">Add a Blog</a></li>
+                    <li><a href="/tour">All Tours</a></li>
+                    <li><a href="/newpost">Add a Tour</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="/login">Login</a></li>
