--- a/templates/display_providers.html
+++ b/templates/display_providers.html
@@ -4,15 +4,15 @@
 <div class="jumbotron text-center">
         <h1>{{title}}</h1>
 </div>
-{% if users|length == 0 %}
-    <p>No users added</p>
+{% if providers|length == 0 %}
+    <p>No providers added</p>
 {% else %}
 
     <ul>
-        {% for user in users %}
+        {% for provider in providers %}
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3><a href="/blog?user={{user.username}}">{{user.username}}</a></h3></div>
+                <h3><a href="/tour?provider={{provider.username}}">{{provider.username}}</a></h3></div>
         </div>
         {% endfor %}
     </ul>
