--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
     <div class="jumbotron text-center">
-        <h1>Sign Up</h1>
+        <h1>Provider Sign Up</h1>
     </div>
     <form action='/register' method='post'>
         
