--- a/templates/base.html
+++ b/templates/base.html
@@ -13,15 +13,15 @@
         <nav class="navbar navbar-default">
                 <div class="container-fluid">
                   <div class="navbar-header">
-                    <a class="navbar-brand" href="/">Tour-zone</a>
+                    <a class="navbar-brand" href="/tour">Tour-zone</a>
                   </div>
                   <ul class="nav navbar-nav">
-                    <li class="active"><a href="/">Home</a></li>
+                    <li class="active"><a href="/tour">Home</a></li>
                     <li><a href="/tour">All Tours</a></li>
                     <li><a href="/newpost">Add a Tour</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/login">Login</a></li>
+                    <li><a href="/login">Provider login</a></li>
                     <li><a href="/logout">Logout</a></li>
                   </ul>
             </div>
